--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
@@ -25,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.4.0",
     "react1": "file:",
     "styled-components": "^6.1.16",
